--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="theme-color" content="#f8f9fc">
+    <meta name="theme-color" content="#006400">
     <title>Creative Palms Institute AI Assistant</title>
+    
+    <!-- Favicon links -->
+    <link rel="icon" type="image/x-icon" href="static/logo.png">
+    <link rel="apple-touch-icon" href="static/logo.png">
+    <link rel="shortcut icon" type="image/png" href="static/logo.png">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
